[metadata]
name = python-bring-api
version = 1.0.2
author = Elias Ball
author_email = contact.eliasball@gmail.com
description = Unofficial python package to access Bring! shopping lists API.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/blue1stone/python-bring-api
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests

[options.packages.find]
where = src